# dbus-launch-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: lib.rs  pipe.rs  process.rs  sys.rs  xml.rs
tests/: fds.rs  launch.rs  launch_error.rs
